feat(plugins): add content-hash lock file
